reforma do site de portifolio

--- a/index.html
+++ b/index.html
@@ -4,38 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jonas de Brito Balero</title>
+    <title>Jonas Brito</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!- Barra com links do site, para direcionamento ->
     <nav>
-        <h1>Portfólio</h1>
-        <a href="#">Principal</a>
-        <a href="#">Contato</a>
+        <a href="#" id="al">Jonas</a>
+        <a href="#" id="ar">Sobre</a>
+        <a href="#" id="ar">Contato</a>
+        <a href="#" id="ar">Projetos</a>
     </nav>
-    <header>
-        <h1>Jonas Brito Balero</h1>
+    <!- começo do escopo do site, uma imagem minha e breve biografia->
+    <header class="container">
+        <img src="imagens/foto_pessoal01-225x300.jpeg" alt="Imagem de Jona Brito" >
+        <p>Eu sou Jonas, tenho 18 anos, estou no Ensino médio integrado ao curso de T.I. possui um grande conhecimento da linguagem Python e um conhecimento intermediário de HTML e CSS. Além disso tenho grande vontade de aprender e conhecer cada vez mais conteúdos da programação.</p>
     </header>
+    <!- Detalhes da minha carreira ->
     <main>
-        <article>
+        <!- Detalhar areas de atuação, cursos feitos->
+        <section class="container">
             <aside>
-                <img src="foto01.jpg" alt="Foto_do_Jonas">
-                <h1>Jonas Brito Balero</h1>
+                <img src="#" alt="Imagem do curso">
             </aside>
-            <div>
-                <h1>Quem Sou eu?</h1>
-                <p>Sou uma pessoa ansiosa em ambicioça no mercado tecnologico, sou um jovem programador em busca de mais conhecimento para a minha </p>
-            </div>
-        </article>
-        <article class="academico">
-
-        </article>
-        <article class="projetos">
-
-        </article>
+            <article>
+                <p>Ensino médio integrado ao curso tecnico de tecnico de informatica(T.I.)</p>
+                <p>Instituição: IFSP - Instituto Federal de Educação, Ciência e Tecnologia de São Paulo, Campus Piracicaba</p>
+                <p>Periodo: 2020 - 2023</p>
+                <p>Situação: Cursando</p>
+            </article>
+            <aside>
+                <img src="#" alt="Imagem do curso">
+            </aside>
+            <article>
+                <p>CC50: Introdução à Ciência da Computação</p>
+                <p>Instituição: Harvard</p>
+                <p>Periodo: 2022 - 2023</p>
+                <p>Situação: Cursando</p>
+            </article>
+        </section>
+        <!- projetos realizados ou em progresso->
+        <section class="container">
+            <article>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia at esse fugit dolor veniam consectetur, tempore molestiae ut inventore aliquid, rerum magnam ullam reprehenderit excepturi eligendi soluta doloremque ea totam.</p>
+            </article>
+            <aside>
+                <img src="#" alt="Imagem do projeto">
+            </aside>
+        </section>
     </main>
     <footer>
-
+        <p>Copyright © 2021 Meu Portfólio</p>
     </footer>
 </body>
 </html>
