ajustes na pagina principal
acrescentando imagens e modificando o corpo do site

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <img src="imagens/foto_pessoal01-225x300.jpeg" alt="Imagem de Jona Brito" >
         <p>Eu sou Jonas, tenho 18 anos, estou no Ensino médio integrado ao curso de T.I. possui um grande conhecimento da linguagem Python e um conhecimento intermediário de HTML e CSS. Além disso tenho grande vontade de aprender e conhecer cada vez mais conteúdos da programação.</p>
     </header>
-    <!- Detalhes da minha carreira ->
     <main>
         <!- Detalhar areas de atuação, cursos feitos->
+        <div id="separador"> Cursos</div>
         <section class="container">
             <aside>
-                <img src="#" alt="Imagem do curso">
+                <img src="imagens/ifsp.png" alt="Imagem do curso">
             </aside>
             <article>
                 <p>Ensino médio integrado ao curso tecnico de tecnico de informatica(T.I.)</p>
@@ -34,7 +34,7 @@
                 <p>Situação: Cursando</p>
             </article>
             <aside>
-                <img src="#" alt="Imagem do curso">
+                <img src="imagens/cs50.png" alt="Imagem do curso">
             </aside>
             <article>
                 <p>CC50: Introdução à Ciência da Computação</p>
@@ -43,13 +43,20 @@
                 <p>Situação: Cursando</p>
             </article>
         </section>
+        <div id="separador"> Projetos</div>
         <!- projetos realizados ou em progresso->
         <section class="container">
             <article>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia at esse fugit dolor veniam consectetur, tempore molestiae ut inventore aliquid, rerum magnam ullam reprehenderit excepturi eligendi soluta doloremque ea totam.</p>
             </article>
             <aside>
-                <img src="#" alt="Imagem do projeto">
+                <img src="imagens/assistente_virtual.png" alt="Imagem do assistente virtual">
+            </aside>
+            <article>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia at esse fugit dolor veniam consectetur, tempore molestiae ut inventore aliquid, rerum magnam ullam reprehenderit excepturi eligendi soluta doloremque ea totam.</p>
+            </article>
+            <aside>
+                <img src="imagens/bot_trader.jpeg" alt="Imagem do bot trader">
             </aside>
         </section>
     </main>
